; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_thread_block.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_thread_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jetsam_thread_state = type { i32 }

@THREAD_UNINT = common dso_local global i32 0, align 4
@NSEC_PER_MSEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @memorystatus_thread_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memorystatus_thread_block(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.jetsam_thread_state*, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.jetsam_thread_state* (...) @jetsam_current_thread()
  store %struct.jetsam_thread_state* %6, %struct.jetsam_thread_state** %5, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.jetsam_thread_state*, %struct.jetsam_thread_state** %5, align 8
  %11 = getelementptr inbounds %struct.jetsam_thread_state, %struct.jetsam_thread_state* %10, i32 0, i32 0
  %12 = load i32, i32* @THREAD_UNINT, align 4
  %13 = load i64, i64* %3, align 8
  %14 = load i32, i32* @NSEC_PER_MSEC, align 4
  %15 = call i32 @assert_wait_timeout(i32* %11, i32 %12, i64 %13, i32 %14)
  br label %21

16:                                               ; preds = %2
  %17 = load %struct.jetsam_thread_state*, %struct.jetsam_thread_state** %5, align 8
  %18 = getelementptr inbounds %struct.jetsam_thread_state, %struct.jetsam_thread_state* %17, i32 0, i32 0
  %19 = load i32, i32* @THREAD_UNINT, align 4
  %20 = call i32 @assert_wait(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %16, %9
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @thread_block(i32 %22)
  ret i32 %23
}

declare dso_local %struct.jetsam_thread_state* @jetsam_current_thread(...) #1

declare dso_local i32 @assert_wait_timeout(i32*, i32, i64, i32) #1

declare dso_local i32 @assert_wait(i32*, i32) #1

declare dso_local i32 @thread_block(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
